@@ -265,15 +265,19 @@ CREATE ... (<KEY> <type> PRIMARY KEY, name1 type, name2 type) ...
 It is possible to assign columns a type during column family creation.  Columns configured with a type are validated accordingly when a write occurs. Column types are specified as a parenthesized, comma-separated list of column term and type pairs.  The list of recognized types are:
 
 |_. type|_. description|
-|bytea|Arbitrary bytes (no validation)|
 |ascii|ASCII character string|
-|text|UTF8 encoded string|
-|varchar|UTF8 encoded string|
-|uuid|Type 1, or type 4 UUID|
-|varint|Arbitrary-precision integer|
-|int|8-byte long (same as bigint)|
 |bigint|8-byte long|
+|blob|Arbitrary bytes (no validation)|
+|boolean|true or false|
 |counter|Counter column, (8-byte long)|
+|decimal|Variable-precision decimal|
+|double|8-byte floating point|
+|float|4-byte floating point|
+|text|UTF8 encoded string|
+|timestamp|Date + Time, encoded as 8 bytes since epoch|
+|uuid|Type 1, or type 4 UUID|
+|varchar|UTF8 encoded string|
+|varint|Arbitrary-precision integer|
 
 _Note: In addition to the recognized types listed above, it is also possible to supply a string containing the name of a class (a sub-class of @AbstractType@), either fully qualified, or relative to the @org.apache.cassandra.db.marshal@ package._
 
@@ -380,8 +384,9 @@ Versioning of the CQL language adheres to the "Semantic Versioning":http://semve
 h1. Changes
 
 pre. 
-Thu, 07 Sep 2011 09:01:00 -0500 - Jonathan Ellis
+Wed, 07 Sep 2011 09:01:00 -0500 - Jonathan Ellis
  * Updated version to 2.0; Documented row-based count()
+ * Updated list of supported data types
 
 Wed, 10 Aug 2011 11:22:00 -0500 - Eric Evans
  * Improved INSERT vs. UPDATE wording.
