@@ -66,6 +66,7 @@
    (CASSANDRA-3148)
  * fix inconsistency of the CLI syntax when {} should be used instead of [{}]
    (CASSANDRA-3119)
+ * rename CQL type names to match expected SQL behavior (CASSANDRA-3149)
 
 0.8.5
  * fix NPE when encryption_options is unspecified (CASSANDRA-3007)
